# Avgamah

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  application.yml  docker-compose.yml  entrypoint.sh  models.py  pyproject.toml  requirements.txt  tortoise_config.py  tortoise_config.py.example
.github/workflows/: isort.yml
avgamah/: __init__.py  __main__.py
avgamah/core/: bot.py  client.py  event_handler.py
avgamah/modules/Admin/: __init__.py  give_roles.py  hooks.py  remove_roles.py  roles.py  sudo.py
avgamah/modules/Events/: __init__.py  member_join_event.py  set_welcome_channel.py  set_welcome_message.py
avgamah/modules/Fun/: __init__.py  cat.py  cursedcomments.py  dog.py  joke.py  memes.py  quiz.py
avgamah/modules/Misc/: __init__.py  activities.py  avatar.py  botinfo.py  hello.py  ipinfo.py  links_itsnp.py  ping.py  rashifal.py  rtfm.py  serverinfo.py  truth_or_dare.py  urban.py  userinfo.py  weather.py
avgamah/modules/Moderation/: __init__.py  ban.py  kick.py  mute.py  purge.py  selfmute.py  slowmode.py  unban.py  unmute.py  warn.py  warnings.py
avgamah/modules/Music/: __init__.py  clear.py  join.py  leave.py  loop.py  lyrics.py  move_song.py  now_playing.py  pause.py  play.py  queue.py  remove_song.py  resume.py  seek.py  shuffle.py  skip.py  stop.py  volume.py
avgamah/modules/NSFW/: ass.py  boobs.py  hentai.py  nudes.py  pussy.py
avgamah/modules/Utilities/: __init__.py  colors.py  embeds.py  emojis.py  free_courses.py  suggestions.py  tickets.py
avgamah/utils/: activity.py  buttons.py  cache.py  courses.py  pagination.py  permissions.py  rtfm.py  spotify.py  utilities.py
avgamah/utils/Cache/: rashifal_cache.py  reddit_cache.py
config/: __init__.py  bot.py  database.py  lavalink.py  reddit.py  spotify.py
itsnp/: __init__.py  __main__.py
itsnp/core/: bot.py  client.py  event_handler.py  models.py  tortoise_config.py
itsnp/modules/: admin.py  events.py  fun.py  itsnp.py  misc.py  mod.py  music.py  rtfm.py  suggestions.py  tags.py  utils.py
itsnp/modules/Admin/: __init__.py  admin_role.py  give_roles.py  hooks.py  list_moderation_roles.py  mod_role.py  remove_roles.py  roles.py  staff_role.py  sudo.py
itsnp/modules/Events/: __init__.py  member_join_event.py  set_welcome_channel.py  set_welcome_message.py
itsnp/modules/Fun/: cat.py  cursedcomments.py  dog.py  joke.py  memes.py  quiz.py
itsnp/modules/Misc/: avatar.py  botinfo.py  cat.py  dog.py  hello.py  ipinfo.py  links_itsnp.py  misc.py  ping.py  quiz.py  rtfm.py  serverinfo.py  (+4 more)
itsnp/utils/: activity.py  buttons.py  cache.py  courses.py  errors.py  pagination.py  permissions.py  spotify.py  time.py  utilities.py
(+41 files in other folders)
