[tool.poetry]
name = "Avgamah"
version = "1.0.0"
description = ""
authors = ["Nishant Sapkota"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
python-dotenv = "^0.19.2"
aiohttp = "^3.8.1"
aerich = "0.5.3"
tortoise-orm = "0.17.4"
asyncpg = "^0.24.0"
hikari = {git = "https://github.com/hikari-py/hikari"}
hikari-tanjun = {git = "https://github.com/FasterSpeeding/Tanjun"}
APScheduler = "^3.8.1"
bs4 = "^0.0.1"
psutil = "^5.8.0"
hikari-yuyo = {git= "https://github.com/FasterSpeeding/Yuyo"}
lavasnek-rs = "^0.1.0-alpha.1"
nepali-date = "^2.0.5"
spotipy = "^2.19.0"
aioredis = "^2.0.0"
asyncpraw = "^7.5.0"
uvloop = "^0.16.0"
httpx = "^0.21.1"

[tool.poetry.dev-dependencies]
black = "^22.1"
isort = "^5.10.1"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
